7 aug 0.6-??
  * Fixed up warnings thrown by php from beta firmware
  * Added option "Client" to choose bittorrent client(btpd or transmission)
  * Modified setup_default_config() to default us to btpd
  * modified add_torrent() in torrentwatch.php to call chosen client

6 aug 0.6-8
  * 0.6-7 also broken, referenced missing file
  * Removed reference to Eolin.HTTPRequest from rss_dl.php

6 aug 0.6-7
  * 0.6-6 was broken, saved options Install and HTMLOutput to file breaking
  rss_dl.php
  * Changed all references of ['Settings'] to ['Global'] for these two options
  * modified write_config_file to ignore Global
  * modified feed_callback to ignore Global

5 aug 2008: 0.6-6
  * modified add_torrent in torrentwatch.php to use 'Save Torrents' option
  * modified display_global_settings to display new option
  * modified parse_options() in tw-iface.php to handle new option
  * add function setup_default_config() called just before cron installer
  * modified tw-iface.php to send different css sheet if environment var
  REMOTE_ADDR=127.0.0.1
  * Duplicated tw-iface.css to tw-iface.local.css
  * Adjust torrentwatch-installer.cgi to link tw-iface.local.css
  * Renamed 'Torrent Dir' to 'Watch Dir' to avoid confusion
  * Special case in setup_default_config() to move the setting

3 aug 2008: 0.6-5
  * Completed dltorrent option for tw-iface.php
    * seperated out get_torrent_link() function from check_for_torrent()
    * Fixed case where get_torrent_link() would pass an array
    * Removed handling of said array from fetch_http()
    * added download link to any torrent labeled "No Match"
  * Updated torrentwatch.php to unlink torrents after starting them
  * Finished updating rss_dl_utils.php to use the new torrent dir setting

3 aug 2008: 0.6-4
  * config file now defined in rss_dl_utils.php rather than individual scripts
  * Removed some custom network code in favor of only supporting wget
  * Rewrote torrentwatch.sh in php